Remove deprecated dynamoNamespace field from Lab 3
Fixed deprecation warnings in DynamoGraphDeployment:
- Removed 'dynamoNamespace: vllm-kv-demo' from Frontend service
- Removed 'dynamoNamespace: vllm-kv-demo' from VllmWorker service

The dynamoNamespace field is deprecated in v0.8.0 and automatically
prefixed as 'dynamo-{deployment-name}' by the operator.

Warnings removed:
- Warning: spec.services[Frontend].dynamoNamespace is deprecated
- Warning: spec.services[VllmWorker].dynamoNamespace is deprecated

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac39aa1b",
+   "id": "d70077e9",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dbe9481",
+   "id": "1cebbf77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f90275f",
+   "id": "a708dc9b",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5873516",
+   "id": "f7b68328",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cac60f8",
+   "id": "17bee422",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a7fd86a",
+   "id": "1cf4ed7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c34b692",
+   "id": "84c4e45c",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22745f60",
+   "id": "167c7f0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40c4e555",
+   "id": "fa5f1cea",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f13b3a19",
+   "id": "70d0f1c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3657bb44",
+   "id": "2b0503be",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad98ed71",
+   "id": "1a1accf2",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12eb63fa",
+   "id": "cdbce8a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38898a5e",
+   "id": "3cd3cfc7",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa2edfe",
+   "id": "daeb444a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45677545",
+   "id": "652f3146",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bce9f3c1",
+   "id": "584da759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1b175eb",
+   "id": "f6f5e177",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50392909",
+   "id": "402c2e25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,6 @@
     "spec:\n",
     "  services:\n",
     "    Frontend:\n",
-    "      dynamoNamespace: vllm-kv-demo\n",
     "      componentType: frontend\n",
     "      replicas: 1\n",
     "      extraPodSpec:\n",
@@ -503,7 +502,6 @@
     "              value: info\n",
     "    VllmWorker:\n",
     "      envFromSecret: hf-token-secret\n",
-    "      dynamoNamespace: vllm-kv-demo\n",
     "      componentType: worker\n",
     "      replicas: 2\n",
     "      resources:\n",
@@ -547,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68c87349",
+   "id": "e9147733",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb144781",
+   "id": "ab47e863",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f2dd77f",
+   "id": "389c5450",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5a8c267",
+   "id": "bbcf8596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "458f647d",
+   "id": "036ac55d",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f96cd87b",
+   "id": "98f2c3e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63ea2f35",
+   "id": "a82c83a7",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f000ddbe",
+   "id": "8683352a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1ad17d5",
+   "id": "9dd42f9d",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -756,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee6cd19",
+   "id": "a4170428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88cd869c",
+   "id": "c6bd6826",
    "metadata": {},
    "source": [
     "**Understanding the Output:**\n",
@@ -917,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86a38485",
+   "id": "e5a8722a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05e3c397",
+   "id": "bc6cb38f",
    "metadata": {},
    "source": [
     "2. Verify the NodePort service is accessible:"
@@ -937,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "197172d4",
+   "id": "b8a7e305",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae116182",
+   "id": "e973526a",
    "metadata": {},
    "source": [
     "#### Install AI-Perf\n",
@@ -997,17 +995,13 @@
     "  --request-count 200\n",
     "```\n",
     "\n",
-    "#### What to Observe\n",
-    "\n",
-    "- **TTFT (Time To First Token)** - lower is better\n",
-    "- **Request throughput** - higher concurrency should utilize both workers\n",
-    "- **Router decision logs** - Check frontend logs to see KV-aware routing in action:"
+    "#### What to Observe\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cb83958",
+   "id": "8b34b238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f205529",
+   "id": "9a596e36",
    "metadata": {},
    "source": [
     "Look for lines showing:\n",
@@ -1067,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49338796",
+   "id": "677012ef",
    "metadata": {},
    "source": [
     "### Community Resources\n",
