--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d70077e9",
+   "id": "2dd5c8de",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cebbf77",
+   "id": "49d1dd8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a708dc9b",
+   "id": "e53195d0",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7b68328",
+   "id": "46a24847",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17bee422",
+   "id": "eb187d9c",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cf4ed7b",
+   "id": "db02c453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84c4e45c",
+   "id": "10a1cade",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "167c7f0b",
+   "id": "22a008d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa5f1cea",
+   "id": "50b7de98",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70d0f1c1",
+   "id": "44dce0f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b0503be",
+   "id": "eca818b3",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a1accf2",
+   "id": "54276082",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdbce8a8",
+   "id": "ed75a3b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cd3cfc7",
+   "id": "78fc48ef",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daeb444a",
+   "id": "9e986131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "652f3146",
+   "id": "57fcc157",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "584da759",
+   "id": "933f54c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6f5e177",
+   "id": "0ff1b073",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "402c2e25",
+   "id": "23cc4413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9147733",
+   "id": "8dd23952",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab47e863",
+   "id": "6bc51dfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "389c5450",
+   "id": "4776ff08",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbcf8596",
+   "id": "0ff59519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "036ac55d",
+   "id": "5f7fd2a9",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98f2c3e0",
+   "id": "df4bc832",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a82c83a7",
+   "id": "fb92a15c",
    "metadata": {},
    "source": [
     "---\n",
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8683352a",
+   "id": "e4a80bef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dd42f9d",
+   "id": "239b8d92",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -754,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4170428",
+   "id": "4ccc76bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6bd6826",
+   "id": "8ca71575",
    "metadata": {},
    "source": [
     "**Understanding the Output:**\n",
@@ -901,11 +901,11 @@
     "\n",
     "This proves KV-aware routing is working! The router intelligently tracks which worker has which prefixes cached and directs requests accordingly, maximizing cache reuse and GPU efficiency.\n",
     "\n",
-    "### Optional: Experiment with Load Testing\n",
+    "### Step 3: Load Testing to Observe Multi-Worker Distribution\n",
     "\n",
     "⚠️ **IMPORTANT: Run these commands in a TERMINAL (not in the notebook). AI-Perf can be resource-intensive.**\n",
     "\n",
-    "After completing Step 2 and confirming routing is working, you can experiment with load testing to see multi-worker distribution under concurrent load.\n",
+    "Run concurrent requests to see how the router distributes load across both workers when demand increases.\n",
     "\n",
     "#### Prerequisites\n",
     "\n",
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5a8722a",
+   "id": "fa862cbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc6cb38f",
+   "id": "55e6c3d8",
    "metadata": {},
    "source": [
     "2. Verify the NodePort service is accessible:"
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8a7e305",
+   "id": "967da6e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e973526a",
+   "id": "9a1f9bdc",
    "metadata": {},
    "source": [
     "#### Install AI-Perf\n",
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b34b238",
+   "id": "4bc22c02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a596e36",
+   "id": "2cf0ae7f",
    "metadata": {},
    "source": [
     "Look for lines showing:\n",
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "677012ef",
+   "id": "24bc17f8",
    "metadata": {},
    "source": [
     "### Community Resources\n",
